--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ torch==1.13.1+cu116
 torchvision==0.14.1+cu116
 numpy==1.24.2
 onnx==1.13.1
-#onnxruntime==1.14.1 # CPU version
-onnxruntime-gpu # GPU version
+onnxruntime==1.14.1 # CPU version
+# onnxruntime-gpu # GPU version
 onnx-simplifier==0.4.10
 ipykernel==6.21.3
 pytest==7.2.2
